css overflow fix

--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -4,9 +4,13 @@ body {
 	background-image: url(../img/plan.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
+	overflow: hidden;
 }
 a {
 	text-decoration: none;
+}
+.all {
+	overflow: hidden;
 }
 .title {
 	font-family: sans-serif;
